test: unit test Get By Application name succesful